--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"id": "obsidian-linter",
 	"name": "Linter",
-	"version": "1.2.10",
+	"version": "1.2.11-unofficial",
 	"minAppVersion": "0.9.7",
 	"description": "Enforces consistent markdown styling.",
 	"author": "Victor Tao",
